--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon -L app.js"
   },
   "author": "Paul Zijlmans",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "mysql2": "^2.3.3",
     "pug": "^3.0.2"
   }
 }
