--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - '3306:3306'
     volumes:
       - 'dbdata:/var/lib/mysql'
-      - './database:/docker-entrypoint-initdb.d'
+      # - './database:/docker-entrypoint-initdb.d'
 
   shop:
     build: ./
