MongoDB: Create Database Connection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,19 @@
 version: '3.9'
 
 services:
-  database:
-    image: mysql:8.0.12
-    restart: always
-    env_file:
-      - ./.env
-    ports:
-      - '3306:3306'
-    volumes:
-      - 'dbdata:/var/lib/mysql'
-      # - './database:/docker-entrypoint-initdb.d'
-  
   mongodb:
     image: mongo:5.0
     restart: always
     env_file:
       - ./.env
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodb_data:/data/db
 
   shop:
     build: ./
     depends_on:
-      - database
       - mongodb
     command: npm start
     working_dir: /app
@@ -31,5 +23,5 @@ services:
       - './:/app'
 
 volumes:
-  dbdata:
+  mongodb_data:
     driver: local
