--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "mongodb": "^4.4.1",
-    "mysql2": "^2.3.3",
-    "pug": "^3.0.2",
-    "sequelize": "^6.16.3"
+    "pug": "^3.0.2"
   }
 }
