--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "mongoose": "^6.2.7",
+    "nodemailer": "^6.7.3",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^3.0.2"
   }
 }
