--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   mongodb:
     image: mongo:5.0
-    restart: always
+    restart: unless-stopped
     env_file:
       - ./.env
     ports:
