--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "mongoose": "^6.2.7",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^3.0.2"
