--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^6.7.3",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdfkit": "^0.13.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "stripe": "^8.216.0"
   }
 }
