Deploy: Switch to MongoDB Atlas

--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,8 @@
-MONGO_INITDB_ROOT_USERNAME=
-MONGO_INITDB_ROOT_PASSWORD=
-MONGO_INITDB_DATABASE=
+PORT=
+MONGODB_USERNAME=
+MONGODB_PASSWORD=
+MONGODB_DATABASE=
+MONGODB_CLUSTERNAME=
 SENDGRIP_API_KEY=
 SENDGRID_FROM=
 STRIPE_SECRET_KEY=
-PORT=
