--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
+    "helmet": "^5.1.0",
     "mongoose": "^6.2.7",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
