--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-validator": "^6.14.0",
     "helmet": "^5.1.0",
     "mongoose": "^6.2.7",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
     "nodemailer-sendgrid-transport": "^0.2.0",
